--- a/html/tarjeta.html
+++ b/html/tarjeta.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="../style/general.css">
     <link rel="stylesheet" href="../style/formulario.css">
+    <link rel="shortcut icon" href="../icons/building.png" type="image/x-icon">
     <title>Hotel - Crear cuenta</title>
 </head>
 
@@ -33,28 +34,28 @@
                         <label class="fuente-general fuente-grande label-form"> Numero de tarjeta: </label>
                         <br>
                         <input type="text" name="numbercard" id="numbercard-txt"
-                            class="input-form fuente-general fuente-media">
+                            class="input-form fuente-general fuente-media" placeholder='Ej. "1234 1234 1234 1234" o "1234123412341234"'>
                         <br>
                         <span id="text-error-card" class="error-span fuente-general fuente-media">### Error ###</span>
                         <br>
                         <label class="fuente-general fuente-grande label-form"> Vencimiento: </label>
                         <br>
                         <input type="text" name="vencimiento" id="vencimiento-txt"
-                            class="input-form fuente-general fuente-media">
+                            class="input-form fuente-general fuente-media" placeholder="Ej. 09/29">
                         <br>
                         <span id="text-error-vencimiento" class="error-span fuente-general fuente-media">### Error
                             ###</span>
                         <br>
                         <label class="fuente-general fuente-grande label-form"> Codigo de seguridad (CVV): </label>
                         <br>
-                        <input type="text" name="cvv" id="cvv-txt" class="input-form fuente-general fuente-media">
+                        <input type="text" name="cvv" id="cvv-txt" class="input-form fuente-general fuente-media" placeholder="Ej. 977">
                         <br>
                         <span id="text-error-cvv" class="error-span fuente-general fuente-media">### Error ###</span>
                         <br>
                         <label class="fuente-general fuente-grande label-form"> Numero de telefono: </label>
                         <br>
                         <input type="tel" name="telefono" id="telefono-txt"
-                            class="input-form fuente-general fuente-media">
+                            class="input-form fuente-general fuente-media" placeholder='Ej. "634 105 6178" o "6341056178"'>
                         <br>
                         <span id="text-error-tel" class="error-span fuente-general fuente-media">### Error ###</span>
                         <br>
