--- a/html/registro.html
+++ b/html/registro.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="../style/general.css">
     <link rel="stylesheet" href="../style/formulario.css">
+    <link rel="shortcut icon" href="../icons/building.png" type="image/x-icon">
     <title>Hotel - Crear cuenta</title>
 </head>
 
@@ -33,25 +34,25 @@
                         <label class="fuente-general fuente-grande label-form"> Crea un usuario: </label>
                         <br>
                         <input type="text" name="usuario" id="new-usuario-txt"
-                            class="input-form fuente-general fuente-media">
+                            class="input-form fuente-general fuente-media" placeholder="Ej. Humberto Huerta">
                         <br>
                         <span id="text-error-new-user" class="error-span fuente-general fuente-media">### Error
                             ###</span>
                         <br>
-                        <label class="fuente-general fuente-grande label-form"> Escribe tu direccion email: </label>
+                        <label class="fuente-general fuente-grande label-form"> Escribe tu dirección email: </label>
                         <br>
-                        <input type="email" name="email" id="email-txt" class="input-form fuente-general fuente-media">
+                        <input type="email" name="email" id="email-txt" class="input-form fuente-general fuente-media" placeholder="Ej. humberto07@gmail.com">
                         <br>
                         <span id="text-error-email" class="error-span fuente-general fuente-media">### Error ###</span>
                         <br>
-                        <label class="fuente-general fuente-grande label-form"> Crea tu contrasena: </label>
+                        <label class="fuente-general fuente-grande label-form"> Crea tu contraseña: </label>
                         <br>
                         <input type="password" name="password" id="create-password-txt"
                             class="input-form fuente-general fuente-media">
                         <br>
                         <span id="text-error-pass" class="error-span fuente-general fuente-media">### Error ###</span>
                         <br>
-                        <label class="fuente-general fuente-grande label-form"> Confirma tu contrasena: </label>
+                        <label class="fuente-general fuente-grande label-form"> Confirma tu contraseña: </label>
                         <br>
                         <input type="password" name="confirm-password" id="confirm-password-txt"
                             class="input-form fuente-general fuente-media">
