--- a/html/sesion.html
+++ b/html/sesion.html
@@ -35,7 +35,7 @@
                         <input type="text" name="usuario" id="usuario-txt"
                             class="input-form fuente-general fuente-media">
                         <br>
-                        <label class="fuente-general fuente-grande label-form"> Ingresa tu contrasena: </label>
+                        <label class="fuente-general fuente-grande label-form"> Ingresa tu contraseña: </label>
                         <br>
                         <input type="password" name="password" id="password-txt"
                             class="input-form fuente-general fuente-media">
@@ -49,7 +49,7 @@
                         </a>
                         <button type="button" id="aceptar-btn" class="fuente-general fuente-grande">Aceptar</button>
                     </div>
-                    <span class="fuente-general fuente-media">No tienes cuenta? <a href="registro.html"> Crear una
+                    <span class="fuente-general fuente-media">¿No tienes cuenta? <a href="registro.html"> Crear una
                         </a></span>
                 </form>
             </div>
